--- a/projet_tutore/public/stylesheets/style.css
+++ b/projet_tutore/public/stylesheets/style.css
@@ -1,3 +1,18 @@
+*
+{
+	box-sizing: border-box;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	-webkit-touch-callout: none;
+}
+
+::selection
+{
+	background: rgba(0,0,0,0);
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
