--- a/projet_tutore/views/edition.ejs
+++ b/projet_tutore/views/edition.ejs
@@ -56,7 +56,8 @@
 						<em>Propriétés</em>
 					</div>
 
-					<div class="center w200p" id="generate">					<div class="center w100p"><button class="w100p">Générer l'URL</button></div>
+					<div class="center w200p" id="generate">
+							<div class="center w100p"><button oneclick="location.href='afficheur';" class="w100p">Générer l'URL</button></div>
 						<input class="w100" />
 					</div>
 
