--- a/projet_tutore/public/stylesheets/style.css
+++ b/projet_tutore/public/stylesheets/style.css
@@ -1,6 +1,20 @@
 *
 {
 	box-sizing: border-box;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	-webkit-touch-callout: none;
+}
+
+.menu
+{
+	background-color: #F0AD4E;
+	border:2px solid black;
+	height:15em;
+	margin-top: 5em;
+	text-align: center;
 }
 
 ::selection
@@ -11,6 +25,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+
 }
 
 a
@@ -62,6 +77,15 @@ a
 	position: relative;
 	border: 2px solid black;
 	height: 500px;
+}
+
+.object
+{
+	outline: none;
+	position: absolute;
+	width: 50px;
+	height: 50px;
+	background-color: #888888;
 }
 
 #example1
