--- a/projet_tutore/views/edition.ejs
+++ b/projet_tutore/views/edition.ejs
@@ -24,7 +24,7 @@
 					<div class="container w100" id="navelement">
 						<div><p>Texte</p></div>
 						<div><p>Image</p></div>
-					</div><button></button>
+					</div>
 
 				</div>
 
@@ -53,7 +53,7 @@
 				<div class="one-quarter part">
 
 					<div class="container" id="properties">
-						<em>Propriétées</em>
+						<em>Propriétés</em>
 					</div>
 
 					<div class="center w200p" id="generate">
@@ -96,7 +96,8 @@
 			frameHeight,
 			coeff1080p,
 
-			properties = document.getElementById("properties");
+			properties = document.getElementById("properties"),
+
 			actualiser = document.getElementById("actualiser");
 
 		var xmlhttp = new XMLHttpRequest();
