--- a/projet_tutore/views/index.ejs
+++ b/projet_tutore/views/index.ejs
@@ -34,7 +34,7 @@
 					
 					<div class="flex-container" style="height: 200px;">
   					<span class="item-center">
-  						<a href="Afficheur">Afficheur</a>
+  						<a href="scene">Scene</a>
   					</span>
 					</div>
 				</div>
