--- a/projet_tutore/views/afficheur.ejs
+++ b/projet_tutore/views/afficheur.ejs
@@ -5,19 +5,19 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Afficheur</title>
+		<title>Scene</title>
 		<link rel="stylesheet" href="/stylesheets/style.css">
 		<link rel="stylesheet" href="/stylesheets/knacss.css">
 	</head>
 	<body>
 		<script src="jquery.js"></script>
-    	<div id="zone">
-
-    	</div>
-    
+    	<section id="zone_chat">
+            
+        </section>
 
 
     <script>
+    var socket = io.connect('http://localhost:3000');
     $(function() {
         $('#lecture').on('click', function(req,res){
         	res.end('<p> Voici un paragraphe </p>');
@@ -27,6 +27,30 @@
 			});
 		 });
 	 });
+
+    // Quand on reçoit un message, on l'insère dans la page
+    socket.on('message', function(data) {
+                insereMessage(data.pseudo, data.message)
+            })
+
+    // Quand un nouveau client se connecte, on affiche l'information
+            socket.on('nouveau_client', function(pseudo) {
+                $('#zone_chat').prepend('<p><em>' + pseudo + ' a rejoint le Chat !</em></p>');
+            })
+
+            // Lorsqu'on envoie le formulaire, on transmet le message et on l'affiche sur la page
+            $('#formulaire_chat').submit(function () {
+                var message = $('#message').val();
+                socket.emit('message', message); // Transmet le message aux autres
+                insereMessage(pseudo, message); // Affiche le message aussi sur notre page
+                $('#message').val('').focus(); // Vide la zone de Chat et remet le focus dessus
+                return false; // Permet de bloquer l'envoi "classique" du formulaire
+            });
+            
+            // Ajoute un message dans la page
+            function insereMessage(pseudo, message) {
+                $('#zone_chat').prepend('<p><strong>' + pseudo + '</strong> ' + message + '</p>');
+            }
 	
 	</script>
 	
