--- a/projet_tutore/views/scene.ejs
+++ b/projet_tutore/views/scene.ejs
@@ -22,7 +22,7 @@
                     
                     <div class="flex-container" style="height: 200px;">
                     <span class="item-center">
-                        <a href="scene1">Scene 1</a>
+                        <a href="scene1">Formulaire</a>
                     </span>
                     </div>
                 </div>
@@ -31,7 +31,7 @@
                     
                     <div class="flex-container" style="height: 200px;">
                     <span class="item-center">
-                        <a href="scene2">Scene 2</a>
+                        <a href="scene2">Afficheur</a>
                     </span>
                     </div>
                 </div>
