--- a/projet_tutore/views/scene2.ejs
+++ b/projet_tutore/views/scene2.ejs
@@ -8,9 +8,21 @@
 		<title>Scene2</title>
 		<link rel="stylesheet" href="/stylesheets/style.css">
 		<link rel="stylesheet" href="/stylesheets/knacss.css">
+		<style>
+            #zone_text{
+                color: black;
+                background-color: white;
+                padding: 2px;
+                border: 1px solid black;
+            }
+        </style>
 	</head>
 	<body>
 
+		<section id="zone_text">
+			<br/>
+			<p> Zone de texte </p>
+		</section>
 	
 	</body>
 	
