--- a/projet_tutore/views/scene1.ejs
+++ b/projet_tutore/views/scene1.ejs
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
-
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <title>Super Chat temps réel !</title>
+        <style>
+            #zone_chat strong {
+                color: white;
+                background-color: black;
+                padding: 2px;
+            }
+        </style>
+    </head>
+ 
+    <body>
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Scene1</title>
-		<link rel="stylesheet" href="/stylesheets/style.css">
-		<link rel="stylesheet" href="/stylesheets/knacss.css">
-	</head>
-	<body>
-		
+        <form action="./views/script.js" method="post" id="formulaire_chat">
+            <input type="text" name="message" id="message" placeholder="Votre message..." size="50" autofocus />
+            <input type="submit" id="envoi_message" value="Envoyer" />
+        </form>
 
-		
+        <section id="zone_chat">
+            
+        </section>
 
-	
-	</body>
-	
+
+        <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="./views/script.js"></script>
+    </body>
 </html>
