--- a/projet_tutore/views/index.ejs
+++ b/projet_tutore/views/index.ejs
@@ -6,42 +6,48 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>PTUT</title>
-		<link rel="stylesheet" href="/stylesheets/style.css">
-		<link rel="stylesheet" href="/stylesheets/knacss.css">
+		<link rel="stylesheet" href="/stylesheets/style_menu.css">
+		<link rel="stylesheet" href="stylesheets/materialize/css/materialize.css">
 	</head>
 
-	<body>
+
+	<body class="grey">
+		
+
+			 <nav>
+			    <div class="nav-wrapper light-green">
+			      <a href="#" class="brand-logo center ">Outil de diffusion d'information</a>
+			     
+			    </div>
+			 </nav>
+
+			<div class="container ">
+				<h3>Mes scènes</h3>
+				<a class="waves-effect waves-light btn light-green" href="edition">Créer</a>
+
+				<div class="row white">
+					
+			
 
 
-		<section>
 
-			<div class = "txtcenter">
-				<h1>Outil de diffusion d'information</h1>
+
+
+
+
+
+
+				</div>
 			</div>
 
-			<div class="grid-12">
 
-				<div style="width: 30%" class="center menu ">
-					
-					<div class="flex-container" style="height: 200px;">
-  					<span class="item-center">
-  						<a href="edition">Edition</a>
-  					</span>
-					</div>
-				</div>
-
-				<div style="width: 30%" class="center menu">
-					
-					<div class="flex-container" style="height: 200px;">
-  					<span class="item-center">
-  						<a href="scene">Scene</a>
-  					</span>
-					</div>
-				</div>
-
-			</div>
-
-		</section>
+		<footer class="page-footer light-green ">
+          <div class="container">
+            <h5 class="valign-wrapper"> IUT Aix-Marseille site d'Arles, année universitaire 2017-2018 </h5>
+            <p> projet tutoré encadré par M.DESBENOIT, réalisé par Martin ALLERME, Luca BENEZIT, Xavier GARCIA, Jean-Pierre GUIRAUD, Simon JAYET, Christopher TAILLANDIER </p>
+            <br/>
+          </div>
+        </footer>
 
 		<script type="jquery.js"></script>
 		<script>
