--- a/projet_tutore/public/stylesheets/style.css
+++ b/projet_tutore/public/stylesheets/style.css
@@ -14,6 +14,7 @@ body {
 
 }
 
+
 a
 {
 	text-decoration: none;
@@ -21,7 +22,7 @@ a
 
 .menu
 {
-	background-color: #F0AD4E;
+	
 	border:2px solid black;
 	height:15em;
 	margin-top: 5em;
@@ -54,7 +55,7 @@ a
 	margin-right: 5px;
 	border: 2px solid black;
 	padding: 5px;
-	background-color: #888888;
+	background-color: white;
 }
 
 #navelement >div:last-child
@@ -65,6 +66,7 @@ a
 #newelement > button
 {
 	height: 100px;
+	width: 200px;
 }
 
 #frame
@@ -72,6 +74,7 @@ a
 	position: relative;
 	border: 2px solid black;
 	height: 500px;
+	background: white;
 }
 
 #example1
@@ -95,6 +98,7 @@ a
 #properties
 {
 	height: 40px;
+	background: white;
 }
 
 #generate
@@ -105,4 +109,15 @@ a
 #generate > div
 {
 	margin-bottom: 5px;
+}
+
+.couleur {
+	background: #8bc34a;
+}
+.gris {
+	background: #9e9e9e ;
+}
+
+button {
+	height: 40px;
 }
