--- a/projet_tutore/views/index.ejs
+++ b/projet_tutore/views/index.ejs
@@ -42,8 +42,10 @@
 
 
 		<footer class="page-footer light-green ">
+			
           <div class="container">
-            <h5 class="valign-wrapper"> IUT Aix-Marseille site d'Arles, année universitaire 2017-2018 </h5>
+
+            <h5 class="valign-wrapper"> <img class="left-align" src="/img/logo.png" style="width: 270px; height: 100px;" > IUT Aix-Marseille site d'Arles, année universitaire 2017-2018 </h5>
             <p> projet tutoré encadré par M.DESBENOIT, réalisé par Martin ALLERME, Luca BENEZIT, Xavier GARCIA, Jean-Pierre GUIRAUD, Simon JAYET, Christopher TAILLANDIER </p>
             <br/>
           </div>
