--- a/projet_tutore/views/newelement.ejs
+++ b/projet_tutore/views/newelement.ejs
@@ -6,38 +6,31 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>New Element</title>
-		<link rel="stylesheet" href="/stylesheets/style.css">
-		<link rel="stylesheet" href="/stylesheets/knacss.css">
+		<!-- <link rel="stylesheet" href="/stylesheets/style_menu.css"> -->
+		<link rel="stylesheet" href="/stylesheets/materialize/css/materialize.css">
 	</head>
 
-	<style>
-		.border
-		{
-			border: 2px solid black;
-		}
-	</style>
+	<body class="grey">
 
-	<body>
-		<div style="padding: 50px;">
-			<form class="grid-12">
-				<div class="three-quarters">
-					<div class="center w800p" style="padding: 10px;">
-						<form></form>
-
-
-						<label>Code HTML de l'élément</label><br />
-						<textarea rows="40" cols="100"></textarea>
-					</div>
+		<div class="container">
+			<br><br><br><br><br>
+			<div class="row">
+				<div class="col s8 white z-depth-2">
+					<label>Code HTML de l'élément</label>
+					<textarea style="height:600px;"></textarea>
 				</div>
-				<div class="one-quarter">
-					<div class="border" style="height: 1000px; padding: 5px;">
+				<div class="col s4 light-green z-depth-2 " style="height:600px;">
+					<form>
 						<label>Nom de l'élément</label>
-						<input />
-						<button>Sauvegarder</button>
-					</div>
-				</div>
-			<form>
+						<br>
+						<input type="text" name="name"><br><br><br><br>
+						<a class=" row waves-effect waves-light btn white black-text" href="#">Sauvegarder</a>
+					</form>
+				</div>				
+			</div>
+
 		</div>
+
 	</body>
 
 </html>
