--- a/projet_tutore/views/connection.ejs
+++ b/projet_tutore/views/connection.ejs
@@ -5,15 +5,13 @@
         <title>Connection</title>
     </head>
     <body>
-      <form>
-        Utilisateur: <input type="text" name="login" id="login"><br>
-        Mot de passe: <input type="password" name="mdp" id="mdp"><br>
-        <button type="button" onclick="connection();">Se Connecter</button>
-      </form>
-
-        <section id="forme">
-
-        </section>
+      <section id="content">
+        <form>
+          Utilisateur: <input type="text" name="login" id="login"><br>
+          Mot de passe: <input type="password" name="mdp" id="mdp"><br>
+          <button type="button" onclick="connection();">Se Connecter</button>
+        </form>
+      </section
 
 
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
