--- a/projet_tutore/views/edition.ejs
+++ b/projet_tutore/views/edition.ejs
@@ -381,6 +381,19 @@
 					if(elements[i].selected = true)
 						alert('delete');
 		}
+		
+		 /*
+		var requestURL =  ;
+
+		var request = new XMLHttpRequest();
+
+		request.open('GET', requestURL);
+                request.responseType = 'text';
+                request.send();
+
+                var myJSON = { "name": "Chris", "age": "38" };
+                var myString = JSON.stringify(myJSON);
+                */
 
 	</script>
 
