--- a/projet_tutore/views/connection.ejs
+++ b/projet_tutore/views/connection.ejs
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Connection</title>
+        <!-- <link rel="stylesheet" href="/stylesheets/style_menu.css"> -->
+    <link rel="stylesheet" href="/stylesheets/materialize/css/materialize.css">
     </head>
-    <body>
+    <body class="grey">
       <section id="content">
         <form>
           Utilisateur: <input type="text" name="login" id="login"><br>
@@ -12,7 +14,6 @@
           <button type="button" onclick="connection();">Se Connecter</button>
         </form>
       </section
-
 
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script src="./connection.js"></script>
